@@ -4,10 +4,15 @@
 	* nscd/mem.c (MAX_STACK_USE): Remove definition here.
 	(gc): Initialize stack_used based on allocation in prune_cache.
 	* nscd/cache.c (prune_cache): Use heap for mark array if necessary.
-	Clear array bfore use.
+	Clear array before use.
 
 	* nscd/aicache.c (addhstaiX): Update statistics counter in case
 	memory allocate failed.
+	* nscd/hstcache.c (cache_addhst): Likewise.
+	* nscd/grpcache.c (cache_addgr): Likewise.
+	* nscd/servicescache.c (cache_addserv): Likewise.
+	* nscd/pwdcache.c (cache_addpw): Likewise.
+	* nscd/initgrcache.c (addinitgroupsX): Likewise.
 
 2007-11-23  Ulrich Drepper  <drepper@redhat.com>
 
